--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,16 @@
     "autoload": {
         "psr-4": {
             "Alberto\\": "src/"
-        }
+        },
+        "files": [
+            "bootstrap/helpers.php"
+        ]
     },
     "require-dev": {
         "phpunit/phpunit": "^6.3",
         "mockery/mockery": "^0.9.9"
+    },
+    "require": {
+        "filp/whoops": "^2.1"
     }
 }
